--- a/Cuaderno/tex/dia1.tex
+++ b/Cuaderno/tex/dia1.tex
@@ -782,7 +782,9 @@ En \AppInventor, todas las actividades ocurren en respuesta a algún evento. Por
 
 \subsubsection*{Tipos de Eventos}
 
-La Tabla~\ref{tab:eventTypes} resume los tipos de eventos existentes en las aplicaciones \AppInventor. A continuación describiremos cada uno de ellos.
+La Tabla~\ref{tab:eventTypes} resume los tipos de eventos existentes
+en las aplicaciones \AppInventor. A continuación describiremos cada
+uno de ellos.
 
 \begin{table}[H]
   \begin{small}
